--- a/src/component/SummaryItem/SummaryItem.css
+++ b/src/component/SummaryItem/SummaryItem.css
@@ -5,20 +5,11 @@
     margin-bottom: 18px;
 }
 
-/* .imgWrapper {
-    max-width: 60px;
-    margin-right: 10px;
-}
-
-.imgWrapper>img {
-    width: 100%;
-} */
-
 .summaryItem .imgWrapper,
 .summaryItem img {
     width: 100%;
     max-width: 100%;
-    height: 100px;
+    /* height: 100px; */
 }
 
 
